Fix navbar collapse with dark mode button and add email contact

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -13,6 +13,7 @@
         .position {
             font-weight: bolder;
             margin-right: 0.5rem;
+            margin-bottom: 0.5rem;
         }
     }
 }
